cmake_minimum_required(VERSION 3.20)
project(ITU_ALL_DATA)

set(CMAKE_CXX_STANDARD 14)

include_directories("SEMESTER 1/CFP/Assignments/2021-fall-cfp-week11-assignment10-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021-fall-cfp-week12-assignment11-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021-fall-cfp-week6-assignment6-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021-fall-cfp-week9-assignment9-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021-fall-week3-assignment3-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021-fall-week4-assignment4-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/2021-fall-week3-assignment3-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/2021_fall_cfp_week9_midterm_-bsce21012/Code")
include_directories("SEMESTER 1/CFP/Assignments/project type")
include_directories("SEMESTER 1/CFP/Assignments/template_assignment_7-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/template_assignment_8-bsce21012")
include_directories("SEMESTER 1/CFP/Assignments/template_lab_8b-bsce21012")
include_directories("SEMESTER 1/CFP/Final term/fall2021-cfp-final-exam-bsce21012/Code/Files")
include_directories("SEMESTER 1/CFP/labs/2021-fall-cfp-week9-testtask-labexam-bsce21012/Code")
include_directories("SEMESTER 1/CFP/labs/2021-fall-week3-labtaska-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021-fall-week3-labtaskb-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021-fall-week4-labtaska-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021-fall-week4-labtaskb-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021-fall-week5-labtaska-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021-fall-week5-labtaskb-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021-fall-week6-lab-taska-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_10b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_9b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_11b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_12b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13a-bsce21012")
include_directories("SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14a-bsce21012")
include_directories("SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_15ab-bsce21012")
include_directories("SEMESTER 1/CFP/labs/template_lab_11b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/template_lab_6b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/template_lab_7a-bsce21012")
include_directories("SEMESTER 1/CFP/labs/template_lab_7b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/template_lab_8a-bsce21012")
include_directories("SEMESTER 1/CFP/labs/template_lab_8b-bsce21012")
include_directories("SEMESTER 1/CFP/labs/template_lab_9a-bsce21012")
include_directories("SEMESTER 1/CFP/labs/test-bsce21012")
include_directories("SEMESTER 1/CFP/labs/untitled2")
include_directories("SEMESTER 1/CFP/PROJECT/2021-fall-cfp-semester-project-goup-j")
include_directories("SEMESTER 3/DATA STRUCTURE AND ALGORITHMS/LABS/2022-fall-ce-dsa-week5-labtask-a-bsce21012")

add_executable(ITU_ALL_DATA
        "SEMESTER 1/CFP/.idea/functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week11-assignment10-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week11-assignment10-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week11-assignment10-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week11-assignment10-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week12-assignment11-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week12-assignment11-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week12-assignment11-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week12-assignment11-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week6-assignment6-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week6-assignment6-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week6-assignment6-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week6-assignment6-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week6-assignment6-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week9-assignment9-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week9-assignment9-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week9-assignment9-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week9-assignment9-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-cfp-week9-assignment9-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week3-assignment3-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week3-assignment3-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week3-assignment3-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-week3-assignment3-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week3-assignment3-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week4-assignment4-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week4-assignment4-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week4-assignment4-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-week4-assignment4-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week4-assignment4-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/2021-fall-week3-assignment3-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/2021-fall-week3-assignment3-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/2021-fall-week3-assignment3-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/2021-fall-week3-assignment3-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/2021-fall-week3-assignment3-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/admin.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/admin.header.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/2021-fall-week5-assignment5-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/2021_fall_cfp_week9_midterm_-bsce21012/Code/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/2021_fall_cfp_week9_midterm_-bsce21012/Code/Functions.h"
        "SEMESTER 1/CFP/Assignments/2021_fall_cfp_week9_midterm_-bsce21012/Code/main.cpp"
        "SEMESTER 1/CFP/Assignments/project type/admin.cpp"
        "SEMESTER 1/CFP/Assignments/project type/admin.header.h"
        "SEMESTER 1/CFP/Assignments/project type/main.cpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_7-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_7-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_7-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/template_assignment_7-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_7-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_8-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_8-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_8-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/template_assignment_8-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Assignments/template_assignment_8-bsce21012/test.cpp"
        "SEMESTER 1/CFP/Assignments/template_lab_8b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/Assignments/template_lab_8b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/Assignments/template_lab_8b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/Assignments/template_lab_8b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/Final term/fall2021-cfp-final-exam-bsce21012/Code/Files/q1.cpp"
        "SEMESTER 1/CFP/Final term/fall2021-cfp-final-exam-bsce21012/Code/Files/q1.h"
        "SEMESTER 1/CFP/Final term/fall2021-cfp-final-exam-bsce21012/Code/Files/q2.cpp"
        "SEMESTER 1/CFP/Final term/fall2021-cfp-final-exam-bsce21012/Code/Files/q2.h"
        "SEMESTER 1/CFP/Final term/fall2021-cfp-final-exam-bsce21012/Code/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-cfp-week9-testtask-labexam-bsce21012/Code/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-cfp-week9-testtask-labexam-bsce21012/Code/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaska-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaska-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaska-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaska-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaska-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaskb-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaskb-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaskb-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaskb-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week3-labtaskb-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaska-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaska-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaska-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaska-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaska-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaskb-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaskb-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaskb-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaskb-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week4-labtaskb-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaska-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaska-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaska-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaska-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaska-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaskb-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaskb-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaskb-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaskb-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week5-labtaskb-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week6-lab-taska-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021-fall-week6-lab-taska-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week6-lab-taska-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021-fall-week6-lab-taska-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021-fall-week6-lab-taska-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_10b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_10b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_10b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_10b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_9b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_9b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_9b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/2021_fall_cfp_week9_lab_9b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_11b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_11b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_11b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_11b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_12b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_12b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_12b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_12b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13a-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13a-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13a-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13a-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13a-bsce21012/task1.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13a-bsce21012/task1.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_13b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14a-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14a-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14a-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14a-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_14b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_15ab-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_15ab-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_15ab-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/itulahore-cfp-template_lab_15ab-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/template_lab_11b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/template_lab_11b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/template_lab_11b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/template_lab_11b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/template_lab_6b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/template_lab_6b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/template_lab_6b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/template_lab_6b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/template_lab_6b-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/template_lab_7a-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/template_lab_7a-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/template_lab_7a-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/template_lab_7a-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/template_lab_7a-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/template_lab_7b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/template_lab_7b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/template_lab_7b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/template_lab_7b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/template_lab_7b-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/template_lab_8a-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/template_lab_8a-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/template_lab_8a-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/template_lab_8a-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/template_lab_8b-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/template_lab_8b-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/template_lab_8b-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/template_lab_8b-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/template_lab_9a-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/template_lab_9a-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/template_lab_9a-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/template_lab_9a-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/test-bsce21012/catch.hpp"
        "SEMESTER 1/CFP/labs/test-bsce21012/Functions.cpp"
        "SEMESTER 1/CFP/labs/test-bsce21012/Functions.h"
        "SEMESTER 1/CFP/labs/test-bsce21012/main.cpp"
        "SEMESTER 1/CFP/labs/test-bsce21012/test.cpp"
        "SEMESTER 1/CFP/labs/untitled/main.cpp"
        "SEMESTER 1/CFP/labs/untitled1/main.cpp"
        "SEMESTER 1/CFP/labs/untitled2/admin.cpp"
        "SEMESTER 1/CFP/labs/untitled2/admin.header.h"
        "SEMESTER 1/CFP/labs/untitled2/main.cpp"
        "SEMESTER 1/CFP/labs/untitled3/main.cpp"
        "SEMESTER 1/CFP/PROJECT/2021-fall-cfp-semester-project-goup-j/Functions.cpp"
        "SEMESTER 1/CFP/PROJECT/2021-fall-cfp-semester-project-goup-j/Functions.h"
        "SEMESTER 1/CFP/PROJECT/2021-fall-cfp-semester-project-goup-j/main.cpp"
        "SEMESTER 3/DATA STRUCTURE AND ALGORITHMS/LABS/2022-fall-ce-dsa-week5-labtask-a-bsce21012/CE200L- Lab Task 5A - Week 5.docx"
        "SEMESTER 3/DATA STRUCTURE AND ALGORITHMS/LABS/2022-fall-ce-dsa-week5-labtask-a-bsce21012/Functions.cpp"
        "SEMESTER 3/DATA STRUCTURE AND ALGORITHMS/LABS/2022-fall-ce-dsa-week5-labtask-a-bsce21012/Functions.h"
        "SEMESTER 3/DATA STRUCTURE AND ALGORITHMS/LABS/2022-fall-ce-dsa-week5-labtask-a-bsce21012/main.cpp"
        "SEMESTER 3/DATA STRUCTURE AND ALGORITHMS/LABS/2022-fall-ce-dsa-week5-labtask-a-bsce21012/Makefile"
        "SEMESTER 3/DATA STRUCTURE AND ALGORITHMS/LABS/2022-fall-ce-dsa-week5-labtask-a-bsce21012/README.md")
